[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/player.png" type="Texture" id=2]
[ext_resource path="res://Sprites/bg.png" type="Texture" id=3]
[ext_resource path="res://Sprites/pillar1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/pillar2.png" type="Texture" id=5]
[ext_resource path="res://Objects/Ghost.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/dash.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.2663, 2.42403 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
dash_object = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="WallCheck1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )

[node name="WallCheck2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -32, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 640, 480 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -16, -16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 100, 200 )
motion_mirroring = Vector2( 640, 480 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( -16, -16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )
motion_mirroring = Vector2( 1280, 720 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -16, -16 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="GroundC" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundC"]
position = Vector2( -0.222725, 13.7149 )
shape = SubResource( 3 )

[node name="Sprite" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="SpriteChild" type="Sprite" parent="Sprite"]
texture = ExtResource( 2 )

[node name="DicordTimer" type="Timer" parent="."]
autostart = true

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="GroundC" to="." method="_on_ground_land"]
